variadics/tests/compile-fail-nightly/var_type_badtype_call.rs
../compile-fail/var_type_badtype_call.rs